istio/01_istio_init/webhook/manifests/MutatingConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "fishnet-inject-sidecar"
  annotations:
    fishnet.io/webhook: "inject-sidecar"
webhooks:
  - admissionReviewVersions:
      - "v1"
      - "v1beta1"
    rules:
      - apiGroups:
          - ""  # 代表核心组
        apiVersions:
          - "*"
        resources:
          - "pods"  # 目前仅对pod进行自动注入
        operations:
          - "CREATE"  # 仅在创建时进行自动注入
        scope: Namespaced
    clientConfig:
      url: https://192.168.136.1:9527
      # base64编码的ca.pem
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUIwekNDQVhpZ0F3SUJBZ0lVUjZyR2xiRmRWWVRPUWtpNTVRYkZrZUt4eERFd0NnWUlLb1pJemowRUF3SXcKUnpFTE1Ba0dBMVVFQmhNQ1ZWTXhDekFKQmdOVkJBZ1RBa05CTVJZd0ZBWURWUVFIRXcxVFlXNGdSbkpoYm1OcApjMk52TVJNd0VRWURWUVFERXdwcmRXSmxjbTVsZEdWek1CNFhEVEl6TVRJeU1UQTVNRFV3TUZvWERUSTRNVEl4Ck9UQTVNRFV3TUZvd1J6RUxNQWtHQTFVRUJoTUNWVk14Q3pBSkJnTlZCQWdUQWtOQk1SWXdGQVlEVlFRSEV3MVQKWVc0Z1JuSmhibU5wYzJOdk1STXdFUVlEVlFRREV3cHJkV0psY201bGRHVnpNRmt3RXdZSEtvWkl6ajBDQVFZSQpLb1pJemowREFR [...]
    name: inject.sidecar.mutwebhook
    sideEffects: None
    objectSelector:
      matchLabels:
        # 将所有带有fishnet.inject: "true"的Pod都执行自动注入
        fishnet.inject: "true"
